
*** HYBRID CHANGELOG
*** Newest entries at top

version hybrid-6-b49   19-Feb-1999
* botch with POLL code fixed, forgot to test it on solaris after
  adding back fdlist code *sigh* 
-Dianora
	
version hybrid-6-b48   19-Feb-1999
* allow all opers to see stats c IP's
* added two more examples to Q lines, crush and cwush
* added fix from syrk (Christophe Kalt) in res.c
-Dianora

version hybrid-6-b47
* oops I don't know what happened to this one, but irc.colorado.edu
is running this one oops.

version hybrid-6-b46   15-Feb-1999
* put fdlist code back in. Ok, I goofed. mea culpa.
* #ifdef USE_SYSLOG missing in ircd.c
* Ultrix'ed the Makefile.in as per Ian
-Dianora

version hybrid-6-b46   15-Feb-1999
* FAST_FD_ISSET was causing the high CPU, *sigh* ok ripped out for now
* Fixed buffer overflow problem in m_unkline() s_serv.c, if a long long
  kline was in the kline.conf file, it cored the server. (reported by Phisher)
-Dianora
	
version hybrid-6-b45    9-Feb-1999
* may as well use the same numeric for not being able to join a channel
  as ircnet uses changes to channel.c, s_err.c, s_err.h, numeric.h
* added small net user count to split end detection
* removed lame sleep()
* try non blocking reads of all connected servers, local opers
 then read_message()
-Dianora
	
version hybrid-6-b44    2-Feb-1999
* remove trailing white space on H/L lines (just for Gersh)
* (s_bsd.c) fixed a botch with rr = 0 causing bizarre behaviour under solaris
  (ping time outs etc.) due to a mis-cut and paste from the select code
* (s_bsd.c) redid read_packet() to use msg_ready again
* (s_bsd.c) removed unnecessary default_read_set default_write_set, that was a
  remnant from a failed experiment with pre-set up fd set's, it was
  just slowing down the code for no reason.
* (s_misc.c) redid get_client_name() slightly to be consistent,
  idented names should not have ~ non-idented names should have ~
  lets not be inconsistent with (+) prefixes for idented names
-Dianora